# Zero-Gate

./: .env.production.template  .replit  ATTACHED_ASSETS_COMPLIANCE_ACHIEVEMENT_REPORT.md  ATTACHED_ASSETS_COMPLIANCE_FRAMEWORK.md  ATTACHED_ASSETS_COMPLIANCE_FRAMEWORK_v2.md  ATTACHED_ASSETS_COMPLIANCE_REPORT.md  ATTACHED_ASSETS_DECISION_LOG.md  ATTACHED_ASSETS_DECISION_LOG_UPDATE.md  ATTACHED_ASSETS_FILE_26_COMPLETION_REPORT.md  ATTACHED_ASSETS_IMPLEMENTATION_PLAN.md  ATTACHED_ASSETS_PHASE_1_IMPLEMENTATION_REPORT.md  ATTACHED_ASSETS_PHASE_2_IMPLEMENTATION_REPORT.md  ATTACHED_ASSETS_VALIDATION_IMPLEMENTATION_PLAN.md  COMPONENT_ALIGNMENT_DEBUG_REPORT.md  COMPREHENSIVE_API_STRESS_TESTING_COMPLETION_REPORT.md  COMPREHENSIVE_ATTACHED_ASSETS_COMPLIANCE_VALIDATION_REPORT.md  COMPREHENSIVE_ATTACHED_ASSETS_REVIEW.md  COMPREHENSIVE_CODEBASE_CLEANUP_REPORT.md  COMPREHENSIVE_COMPONENT_ANALYSIS_CRITICAL_REPORT.md  COMPREHENSIVE_COMPONENT_ANALYSIS_IMPLEMENTATION_DECISION_LOG.md  COMPREHENSIVE_COMPONENT_ANALYSIS_REPORT.md  COMPREHENSIVE_DATA_PIPELINE_VALIDATION_REPORT.md  COMPREHENSIVE_DEBUGGING_COMPLETION_REPORT.md  COMPREHENSIVE_DEBUG_COMPLETION_REPORT.md  COMPREHENSIVE_FRONTEND_BACKEND_VALIDATION_CLEANUP_COMPLETION_REPORT.md  COMPREHENSIVE_PLATFORM_CLEANUP_REPORT.md  COMPREHENSIVE_TESTING_COMPLETION_REPORT.md  COMPREHENSIVE_TESTING_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_VALIDATION_CLEANUP_REPORT.md  COMPREHENSIVE_VALIDATION_ENHANCEMENT_COMPLETION_REPORT.md  COMPREHENSIVE_VALIDATION_ENHANCEMENT_FINAL_IMPLEMENTATION_REPORT.md  CRITICAL_PLATFORM_ASSESSMENT_REPORT.md  CRITICAL_PLATFORM_DEBUG_COMPLETION_REPORT.md  DEPLOYMENT.md  (+45 more)
(+328 files in other folders)
