[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.13",
    "msal>=1.32.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
]
